fixed visual bugs on smaller devices

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -156,3 +156,16 @@ form input, form textarea {
   right: 0;
   font-size: 12px;
 }
+
+@media screen and (max-width : 800px) {
+
+  .about, .gallery, .links, .footer {
+    padding: 5% 5%;
+  }
+
+  .gallery-wrap{
+    width: 90%;
+  }
+
+
+}
